# Tencers

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  environment.yml
cmake/: FindKnitro.cmake
python/ElasticRods/: __init__.py
python/Tencers/: geomtools.py  init.py  rods_IO.py  springs.py  state_saver.py  viewers.py
python/notebooks/: compute_equilibrium.ipynb  display_tencers.ipynb  helix_knitro.ipynb  helix_scipy.ipynb  hypotrochoid_trefoil_knitro.ipynb  hypotrochoid_trefoil_scipy.ipynb  two_trefoils_knitro.ipynb  two_trefoils_scipy.ipynb
python/notebooks/paper_data/figure_1/: two_trefoils.json
python/notebooks/paper_data/figure_10/: torus_5_3.json
python/notebooks/paper_data/figure_11/: helix_3pi.json
python/notebooks/paper_data/figure_12/: borromean_rings_12_springs.json  fancy_rings_final.json
python/notebooks/paper_data/figure_15/: owl_72_springs.json
python/notebooks/paper_data/figure_16_repulsed_knots/: 3_1.json  4_1.json  5_1.json  5_2.json  6_1.json  6_2.json  6_3.json  7_1.json  7_2.json  7_3.json  7_4.json  7_5.json  7_6.json  7_7.json
python/notebooks/paper_data/figure_3/: torus_line_art_final.json  torus_line_art_final_upsampled_resimulated.json
python/notebooks/paper_data/figure_6/: torus_knot_opti.json  torus_sparse_0.0001.json  torus_sparse_0.001.json  torus_sparse_0.01.json  torus_sparse_0.1.json  torus_sparse_1.0.json  torus_sparse_10.0.json  torus_sparse_100.0.json
python/notebooks/paper_data/figure_9/: trefoil_hypotrochoid_9_spr.json  trefoil_other_14_spr.json  trefoil_torus_6_spr.json
python/notebooks/paper_data/insets/: treble_final.json
python_bindings/: CMakeLists.txt  tencers.cc
src/: SlidingNode.cc  SlidingNode.hh  Spring.cc  Spring.hh  Tencer.cc  Tencer.hh  TencerEquilibriumProblem.hh  helpers.hh  symmetry_optimization.cc  symmetry_optimization.hh  tencer_optimization.cc  tencer_optimization.hh  tencers_knitro_problem.hh  weighted_target_curve_fitter.hh
src/DesignOptimization/: EquilibriumOptimizationObject.cc  EquilibriumOptimizationObject.hh  OptimizationObject.hh  OptimizationObjectWithLinearChangeOfVariable.cc  OptimizationObjectWithLinearChangeOfVariable.hh  design_optimization_terms.cc  design_optimization_terms.hh  knitro.hh
